--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,11 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/uuid": "^10.0.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "neo4j-driver": "^5.23.0"
+    "neo4j-driver": "^5.23.0",
+    "uuid": "^10.0.0"
   }
 }
