--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "description": "",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/node": "^22.7.3",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "firebase": "^10.12.5",
     "neo4j-driver": "^5.23.0",
     "react-router-dom": "^6.26.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.2"
   }
 }
