--- a/chat-backend/package.json
+++ b/chat-backend/package.json
@@ -10,5 +10,11 @@
   "description": "",
   "devDependencies": {
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "@types/node": "^22.7.4",
+    "@types/ws": "^8.5.12",
+    "socket.io": "^4.8.0",
+    "ws": "^8.18.0"
   }
 }
