--- a/chat-backend/package.json
+++ b/chat-backend/package.json
@@ -9,12 +9,18 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^22.7.4",
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@types/node": "^22.7.4",
+    "@aws-sdk/client-dynamodb": "^3.665.0",
+    "@aws-sdk/lib-dynamodb": "^3.665.0",
+    "@aws-sdk/types": "^3.664.0",
+    "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.12",
+    "aws-sdk": "^2.1691.0",
     "socket.io": "^4.8.0",
+    "uuid": "^10.0.0",
     "ws": "^8.18.0"
   }
 }
