--- a/chat-backend/package.json
+++ b/chat-backend/package.json
@@ -19,7 +19,9 @@
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.12",
     "aws-sdk": "^2.1691.0",
+    "dotenv": "^16.4.5",
     "socket.io": "^4.8.0",
+    "ts-dotenv": "^0.9.1",
     "uuid": "^10.0.0",
     "ws": "^8.18.0"
   }
